# Weather

./: CMakeLists.txt  LICENSE  README.md  change_location.cpp  change_location.h  change_location.ui  cityprompt.cpp  cityprompt.ui  dummy.cpp  dummy.h  fetch.cpp  fetch.h  first_instance.cpp  first_instance.h  first_instance.ui  helpers.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings_data.cpp  settings_main.cpp  settings_main.h  settings_main.ui  taskbarWindow.cpp  taskbarWindow.h  weather.cpp  weatherFetch.h
weather/: CMakeLists.txt  change_location.cpp  cityprompt.h  dummy.cpp  first_instance.cpp  helpers.h  settings_data.h  settings_data.ui  settings_main.cpp  settings_main.h
